# IgnoreScope

./: .gitignore  .p4config  .p4ignore  CLAUDE - IgnoreScopeCopy.md  CLAUDE.md  DELEGATION.md  LICENSE  README.md  USAGE.md  pyproject.toml
.claude/TODOs/: CLAUDE_INSTALL_MODES.md  COPY_PASTE.md  STATE_REFACTOR.md  SYS_TRAY.md  VOLUME_LEAK_REPORT.md  VOLUME_OVERLAY_FIX.md  container-recreate-prompt.md
.claude/commands/: publish-to-git.md  zev-backlog.md  zev-bug.md  zev-discuss.md  zev-feature.md  zev-feedback.md  zev-project.md  zev-publish.md  zev-resume.md  zev-review.md  zev-start.md  zev-sync.md
.github/workflows/: release.yml
IgnoreScope/: __init__.py  __main__.py  _version.py
IgnoreScope/cli/: __init__.py  commands.py  interactive.py
IgnoreScope/container_ext/: __init__.py  claude_extension.py  git_extension.py  install_extension.py  p4_mcp_extension.py  workflow_setup.py
IgnoreScope/core/: __init__.py  case_conflict.py  config.py  constants.py  hierarchy.py  local_mount_config.py  marked_push.py  marked_staged.py  migration.py  mount_spec_path.py  node_state.py  op_result.py  pattern_conflict.py
IgnoreScope/docker/: __init__.py  compose.py  container_lifecycle.py  container_ops.py  file_filter_ops.py  file_ops.py  marked_push_drain.py  names.py
IgnoreScope/gui/: __init__.py  app.py  config_manager.py  container_ops_ui.py  delegates.py  (+30 more)
planning/: 01_features.md  02_architecture.md  PLANNING_LEGACY_REFERENCE.md  README.md
scripts/: cleanup_doc_archive.py  container_probe.py  setup_workflow.py  sync_to_github.py
tests/: container_probe.py
(+171 files in other folders)
